Prevent long data labels from running over table data on small devices.

--- a/source/assets/styles/_tables.scss
+++ b/source/assets/styles/_tables.scss
@@ -64,8 +64,8 @@ td, th {
   table#duckduckgo-browser-availability {
     td:nth-of-type(1):before { content: "Browser"; }
     td:nth-of-type(2):before { content: "Developer"; }
-    td:nth-of-type(3):before { content: "DuckDuckGo Preloaded"; }
-    td:nth-of-type(4):before { content: "Extension Available"; }
+    td:nth-of-type(3):before { content: "DDGo Preloaded"; }
+    td:nth-of-type(4):before { content: "DDGo Extension"; }
   }
 
 }
